@@ -2,6 +2,8 @@
 
 #include "typeconsistencyenforcement_qos_test.h"
 
+#if defined (RTI_DDS_VERSION_MAJOR) && (RTI_DDS_VERSION_MAJOR >= 5)
+
 TypeConsistencyEnforcementPolicyPolicyTest::TypeConsistencyEnforcementPolicyPolicyTest ()
 {
 }
@@ -10,9 +12,7 @@ bool
 TypeConsistencyEnforcementPolicyPolicyTest::check (const ::DDS_TypeConsistencyEnforcementQosPolicy & dds_qos,
                               const ::DDS::TypeConsistencyEnforcementQosPolicy & qos)
 {
-#if defined (RTI_DDS_VERSION_MAJOR) && (RTI_DDS_VERSION_MAJOR >= 5)
   return dds_qos.kind == static_cast <DDS_TypeConsistencyKind> (qos.kind);
-#else
-  return true;
-#endif
 }
+
+#endif
