@@ -1,3 +1,10 @@
+Sun Dec 16 09:49:50 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * connectors/dds4ccm/tests/Policies/dr_qos_test.cpp:
+        * connectors/dds4ccm/tests/Policies/typeconsistencyenforcement_qos_test.h:
+        * connectors/dds4ccm/tests/Policies/typeconsistencyenforcement_qos_test.cpp:
+          Fixed compile error with RTI DDS < 5
+
 Fri Dec 14 18:38:56 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * connectors/dds4ccm/impl/ndds/convertors/DataReaderQos.h:
